--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Christmas Songs</title>
     <meta charset="utf-8">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#000000">
-    <meta name="description" content="Christmas hits playlist">
+    <meta name="theme-color" content="#f44336">
+    <meta name="description" content="Top Christmas Music Videos - In your browser!">
+    <meta name="author" content="Ben Bristow">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-
-    <title>Christmas Songs</title>
   </head>
   <body>
     <noscript>
